[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Mattias Buelens <mattias@buelens.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "^0.2.4"
regex = "1.3.1"
pathfinding = "2.0.0"
lazy_static = "1.4.0"
modinverse = "0.1.1"
